--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "crosslearn-recommendation-backend",
   "version": "1.0.0",
   "main": "index.js",
-   "scripts": {
+  "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js"
@@ -11,6 +11,7 @@
   "dependencies": {
     "@socket.io/redis-adapter": "^8.1.0",
     "axios": "^1.12.0",
+    "bcryptjs": "^3.0.3",
     "bullmq": "^3.5.1",
     "dotenv": "^16.0.1",
     "express": "^4.20.0",
@@ -28,7 +29,6 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.9.3",
     "@types/eslint": "^8.4.1",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^9.0.1",
@@ -39,6 +39,7 @@
     "morgan": "^1.10.0",
     "prettier": "^2.8.2",
     "ts-node": "^10.4.0",
-    "ts-node-dev": "^2.0.0"
-  }  
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.3"
+  }
 }
