--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2020",
     "module": "CommonJS",
     "rootDir": "src",
-    "outDir": "dist",
+    // "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true
