--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.12.0",
     "bcryptjs": "^3.0.3",
     "bullmq": "^3.5.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.0.1",
     "express": "^4.20.0",
     "helmet": "^6.1.5",
