--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/eslint": "^8.4.1",
     "@types/express": "^4.17.13",
+    "@types/cookie-parser": "^1.4.10",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.15.11",
